--- a/osa_2/osa2_tehtavat.ipynb
+++ b/osa_2/osa2_tehtavat.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tehtävä 2-1. Aihe: Neuroverkko käsin: 4 pistettä"
+    "# Tehtävä 2-1. \n",
+    "### Aihe: Neuroverkko käsin  (max. 4 p)"
    ]
   },
   {
@@ -359,7 +360,7 @@
    "metadata": {},
    "source": [
     "# Tehtävä 2-2\n",
-    "# Aihe: Yksinkertainen neuroverkko Keras Sequential API:lla (max. 3 p)\n",
+    "### Aihe: Yksinkertainen neuroverkko Keras Sequential API:lla (max. 3 p)\n",
     "\n",
     "Koulutetaan yksinkertainen neuroverkko **Keras**-rajapinnalla käyttäen `titanic-dataa`\n",
     "Datan saat osoitteesta: `https://student.labranet.jamk.fi/~varpe/datananalk2019/kerta10/titanic.csv`\n",
@@ -592,8 +593,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Tehtävän tuloksesta:\n",
-    "Test Accuracy: > n. 80 % -- on jo aika hyvä, mutta toki parempaakin saa hakea (jos haluaa käyttää paljon ylimääräistä aikaa tuloksen optimointiin). 85% tulos on jo erinomainen.\n"
+    "**Tehtävän tuloksesta**:\n",
+    "\n",
+    "Test Accuracy: > **n. 80 %** -- tarkkuus on jo aika hyvä, mutta toki parempaakin saa hakea (jos haluaa käyttää paljon ylimääräistä aikaa tuloksen optimointiin). **85%** tarkkuu on jo erinomainen.\n"
    ],
    "metadata": {
     "collapsed": false
