--- a/osa_3/osa3_tehtavat.ipynb
+++ b/osa_3/osa3_tehtavat.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Tehtävä 3-1\n",
-    "### Aihe: Keras Functional API:n käyttö (2 p)\n"
+    "### Aihe: Keras Functional API:n käyttö (max. 2 p)\n"
    ]
   },
   {
@@ -34,9 +34,9 @@
     "2. Aja \"Tehtävän vastaukset\" solu\n",
     "\n",
     "Vinkkejä:\n",
+    "\n",
     "* Käytä `Concatenate`-kerrosta yhdistääksesi `Input2`- ja kolmas `Dense`-kerros vasemmalla kuvassa näkyvän Dense-kerroksen sisääntuloksi.\n",
     "* Samoin käytä `Concatenate`-kerrosta yhdistääksesi `Input3`- ja kolmas `Dense`-kerros oikealla kuvassa näkyvän `Dense`-kerroksen sisääntuloksi.\n",
-    "\n",
     "* Vinkki: `Add`-kerroksen dokumentaatio: https://www.tensorflow.org/api_docs/python/tf/keras/layers/add?hl=th\n"
    ],
    "metadata": {
@@ -148,37 +148,42 @@
    "metadata": {},
    "source": [
     "# Tehtävä 3-2\n",
-    "### Aihe: Konvoluutioneuroverkko ja feature - matriisit (4 pistettä)\n",
+    "### Aihe: Konvoluutioneuroverkko ja feature - matriisit (max. 4 p)\n",
     "\n",
-    "**Taustaa**\n",
+    "Alkuun hieman taustaa konvoluutioneuroverkoista.\n",
     "\n",
-    "`Conv2D`-tasot muuttavat syöttökuvan matemaattisiksi malliksi, jota tiiviisti kytketyt neuroverkon kerrokset käyttävät luokituksen (classification) luomiseen. Koska `Dense`-kerrokset voivat käsitellä vain 1D-dataa, ensin on muutettava viimeisen `Conv2D`-kerroksen antama moniulotteinen feature map 1D-muotoon `Flatten`-kerroksen avulla.\n",
+    "`Conv2D`-tasot muuttavat syöttökuvan matemaattisiksi malliksi, jota tiiviisti kytketyt neuroverkon kerrokset käyttävät luokitteluun (_classification_). Koska `Dense`-kerrokset voivat käsitellä vain 1D-dataa, on muutettava viimeisen `Conv2D`-kerroksen antama moniulotteinen feature map 1D-muotoon `Flatten`-kerroksen avulla.\n",
     "\n",
     "**Mallin konfigurointia** varten tarvitaan seuraavat tiedot:\n",
     "\n",
     "* batch size arvoksi 50. Mallille syötetään 50 näytettä jokaisella askeleella.\n",
-    "* Kuvat ovat 32×32 pikselin kokoisia RGB-kuvia, ja ne asetetaan arvoihin (32, 32, 3)\n",
-    "* Häviöfunktio (loss function) on `sparse_categorical_crossentropy` ja `optimizer`-optimoija on `Adam()`\n",
-    "* Datassa olevia luokkia on 10.\n",
-    "* Epoch-kierrosten määrä on vain 5 iteraatiota. Reaalimäärässä kierroksia voi olla 50-100, mutta harjoitustehtävissä lisäkierroksista ei suuremmin ole hyötyä.\n",
-    "* Datasta 20% on testidataa. Loppu on opetusdataa.\n",
+    "* Kuvat ovat 32×32 pikselin kokoisia RGB-kuvia, ja ne asetetaan arvoihin `(32, 32, 3)`.\n",
+    "* Häviöfunktio (loss function) on `sparse_categorical_crossentropy` ja `optimizer`-optimoija on `Adam()`.\n",
+    "* Datassa olevia luokkia on `10`.\n",
+    "* **Epoch**-kierrosten määrä on vain _5_ iteraatiota. Reaalimäärässä kierroksia voi olla 50-100, mutta harjoitustehtävissä lisäkierroksista ei suuremmin ole hyötyä.\n",
+    "* Datasta **20%** on testidataa. Loppu on opetusdataa.\n",
     "\n",
     "**Syötedatan esikäsittely**:\n",
     "\n",
-    "* Muuta tiedot ennen neuroverkkoon sovittamista float32-formaattiin, minkä seurauksena koulutusprosessi on nopeampi GPU-prosessoinnissa.\n",
-    "* Tietojen skaalaaminen varmistaa, että painojen päivitykset ovat pienempiä, mikä parantaa lopputulosta, koska kaikilla sarakkeilla on yhtä suuri vaikutus lopputulokseen.\n",
+    "* Tehtävässä käytetään **CIFAR-10** (`tensorflow.keras.datasets`) -aineistoja. ts. `CIFAR-10` -aineisto (_Canadian Institute for Advanced Research_) on kokoelma kuvia, joita käytetään yleisesti koneoppimismallien kouluttamiseen.\n",
+    "* Muuta kuvadata ennen neuroverkkoon sovittamista `float32`-formaattiin, minkä seurauksena koulutusprosessi on nopeampi prosessoida.\n",
+    "* Tietojen skaalaaminen varmistaa, että painoarvojen päivitykset ovat pienempiä, mikä parantaa lopputulosta, koska kaikilla sarakkeilla on yhtä suuri vaikutus lopputulokseen.\n",
     "\n",
     "**Syväoppimismallin rakentaminen** (dokumentaatiota mukaillen):\n",
     "\n",
-    "When using this layer as the first layer in a model, provide the keyword argument input_shape (tuple of integers, does not include the sample axis). In the example inputs are 28x28 RGB images with `channels_last`:\n",
-    ">>> input_shape = (28, 28, 3)\n",
-    ">>> convLayer = tf.keras.layers.Conv2D(filters, kernel_size=(3, 3), activation='relu', input_shape=input_shape)\n",
+    "When using this layer as the first layer in a model, provide the keyword argument input_shape (tuple of integers, does not include the sample axis). In the example inputs are 28x28 RGB images with \n",
+    "`channels_last`:\n",
+    "\n",
+    "        >>> input_shape = (28, 28, 3)\n",
+    "        >>> convLayer = tf.keras.layers.Conv2D(filters, kernel_size=(3, 3), activation='relu', input_shape=input_shape)\n",
+    "\n",
+    "Rakennetaan neuroverkkomalli seuraavalla tavalla: \n",
     "\n",
     "1. Tehtävässä määritetään kaksi `Conv2D`-kerrosta peräkkäisessä järjestyksessä (3×3 kernel size + ReLU-aktivointi) sekä niille suodatinmääriksi: 32 ja 64.\n",
     "2. Seuraavaksi käytämme `Flatten`-kerrosta muuntamaan datan yksiulotteiseen muotoon.\n",
-    "3. Luokituksen luomiseen on kaksi `Dense`-kerrosta (suodatinten määrä 64 ja 10). Viimeinen kerros ei aktivoidu ReLU:lla, vaan Softmaxilla, jolloin saadaan moniluokkainen todennäköisyysjakauma vastauksena kysymykseen \"mikä luokka on todennäköisin?\".\n",
+    "3. Luokituksen luomiseen on kaksi `Dense`-kerrosta (suodatinten määrä 64 ja 10). Viimeinen kerros ei aktivoidu ReLU:lla, vaan Softmaxilla, jolloin saadaan moniluokkainen todennäköisyysjakauma vastauksena kysymykseen: \"Mikä luokka on todennäköisin tietylle kuvalle?\".\n",
     "\n",
-    "**Mallin kokoaminen ja sovittaminen**\n",
+    "**Mallin rakentaminen ja sovittaminen**\n",
     "\n",
     "Syväoppimisen arkkitehtuurin tai kehyksen määrittelyn jälkeen voimme koota mallin ja sovittaa tiedot (eli aloittaa harjoittelun).\n",
     "\n",
@@ -186,7 +191,8 @@
     "* sovita (*fit*) data malliin (`model.compile, model.fit`)\n",
     "* arvioi mallin tulokset (`model.evaluate`) käyttäen erillistä testidataa.\n",
     "\n",
-    "Tässä tehtävässä **arvioidaan ja tulostetaan** seuraavat muuttujat\n",
+    "Tässä tehtävässä **arvioidaan ja tulostetaan** seuraavat muuttujat:\n",
+    "\n",
     "```\n",
     "Test loss: ??? and Test accuracy: ???\n",
     "```"
@@ -237,7 +243,7 @@
    "source": [
     "# Tehtävän vastaukset. Huom! Älä muokkaa tätä solua, vaan aja se, kun olet suorittanut tehtävän. \n",
     "\n",
-    "# TODO: Tulostetaan  yhteenveto mallista sekä arviointimetriikka - poista kommentit ao. lauseista\n",
+    "# TODO: Tulostetaan  yhteenveto (summary) mallista sekä arviointimetriikka - ts. poista kommentit ao. lauseista\n",
     "# model.summary()\n",
     "# score = model.evaluate(input_test, target_test, verbose=0)\n",
     "# print(f'Loss: {score[0]} and accuracy: {score[1]}')"
@@ -252,26 +258,27 @@
     "# Tehtävä 3-3\n",
     "## Aihe: Uutisotsikoiden luokittelu RNN- tai LSTM-mallin avulla (4 p)\n",
     "\n",
-    "Tässä luokitellaan dataa sillä perusteella, että onko kyseessä ns. klikkiotsikko vai ei.\n",
+    "Tässä luokitellaan dataa sillä perusteella, että onko kyseessä ns. **klikkiotsikko** (_clickbait_) vai ei.\n",
     "\n",
     "Tehtävässä käytetään seuraavaa dataa:\n",
-    "[https://github.com/bhargaviparanjape/clickbait/tree/master/dataset](https://github.com/bhargaviparanjape/clickbait/tree/master/dataset)\n",
+    "[https://github.com/bhargaviparanjape/clickbait/tree/master/dataset](https://github.com/bhargaviparanjape/clickbait/tree/master/dataset).\n",
     "\n",
     "### Perusalgoritmi tehtävän toteuttamiseen\n",
     "\n",
-    "1. Lataa aineisto **clickbait_data.txt** ja **non_clickbait_data.txt**-tiedostoista\n",
-    "2. Aineistossa olevat viestit kuuluvat joka luokkaa on klikkiotsikko (is clicbait)  == 1 tai ei ole klikkiotsikko (is notclicbait) == 0)\n",
-    "2. Jaetaan data koulutus- ja testidataan (75% koulutusdataa ja 25% testidataa jako)\n",
-    "4. Luo RNN-malli, joka ennustaa, onko aineistossa oleva otsikko klikkiotsikko (clickbait) vai eikö se ole\n",
-    "5. Ennusta mallin tarkkuus `evaluate` - funktiolla\n",
+    "1. Lataa aineisto **clickbait_data.txt** ja **non_clickbait_data.txt**-tiedostoista.\n",
+    "2. Aineistossa olevat viestit kuuluvat joka luokkaa _on klikkiotsikko_ (_is clickbait_) == **1** tai _ei ole klikkiotsikko_ (_is not clickbait_) == **0**).\n",
+    "2. Jaetaan data koulutus- ja testidataan (_75%_ koulutusdataa ja _25%_ testidataa jako).\n",
+    "4. Luo RNN-malli, joka ennustaa, onko aineistossa oleva otsikko klikkiotsikko (_clickbait_) vai ei.\n",
+    "5. Ennusta mallin tarkkuus `model.evaluate()` - funktiolla.\n",
     "\n",
     "## Vinkkejä:\n",
+    "\n",
     "* Käytä numeeriseen muunnokseen `tf.keras.preprocessing.text.Tokenizer` - luokkaa\n",
     "* Luo otsikoista samanpituiset sekvenssit: (`num_words=sanojen_määrä`)\n",
     "\n",
-    "### RNN ja LSTM\n",
+    "### Taustatietoa: RNN ja LSTM\n",
     "\n",
-    "_Recurrent neural networks_ (**RNN**) sopii erityisen hyvin peräkkäisten tietojen käsittelylle. Tunnettuja käytännön sovelluksia ovat mm. Googlen puhehaku ja Applen Siri.\n",
+    "_Recurrent neural networks_ (**RNN**) sopii erityisen hyvin peräkkäisten tietojen käsittelylle. Sen tunnettuja käytännön sovelluksia ovat mm. Googlen puhehaku ja Applen Siri.\n",
     "\n",
     "* RNN sisältää sisäisen muistin.\n",
     "* RNN on syväoppimisalgoritmi, joka voi muistaa syötteen.\n",
@@ -283,9 +290,11 @@
     "**LSTM** (_Long Short-Term Memory_) eroaa RNN:stä siten, että se pystyy paremmin säilyttämään pitkän aikavälin riippuvuuksia datassa. LSTM:ssä on solmut, kuten unohdusportti, tuloportti ja ulostuloportti (engl.  input gate, output gate, forget gate), jotka kontrolloivat tiedon säilyttämistä ja unohtamista. Tämä auttaa LSTM:ää ratkaisemaan RNN:n ongelman, jossa pitkän aikavälin riippuvuuksien muistaminen on haastavaa.\n",
     "\n",
     "#### Tehtävän voi tehdä kahdella eri tavalla\n",
+    "\n",
     "Pisteitä annettaessa riittää, että on tehnyt toisella ao. tavoista (harjoituksen vuoksi voi tehdä molemmillakin):\n",
-    "1. SimpleRNN\n",
-    "2. LSTM - Tämä on suositeltavampi tapa tässä tehtävässä. Tällä tavalla saat mitä luultavimmin parempia tuloksia. "
+    "\n",
+    "1. `SimpleRNN`\n",
+    "2. `LSTM` - Tämä on suositeltavampi tapa tässä tehtävässä. Tällä tavalla saat mitä luultavimmin parempia tuloksia. "
    ]
   },
   {
@@ -299,9 +308,11 @@
    "source": [
     "# Tehtävän toteutus\n",
     "\n",
-    "# Tehtävän vastaukset. Huom! Älä muokkaa tätä solua, vaan aja se, kun olet suorittanut tehtävän. Sijoita results - muuttujaan funktion model.evaluate() tulos.\n",
+    "# Tehtävän vastaukset. Huom! Älä muokkaa tätä solua, vaan aja se, kun olet suorittanut tehtävän. \n",
     "\n",
-    "# Muista määrittää model.compile() - funktioon seurattavaksi suureeksi metrics=['accuracy'], jotta näät, kuinka suuri osa neuroverkon ennustuksista on oikein.\n",
+    "# TODO: Sijoita results - muuttujaan funktion model.evaluate() tulos.\n",
+    "\n",
+    "# TODO: Muista määrittää model.compile() - funktioon seurattavaksi suureeksi tarkkuus eli metrics=['accuracy'], jotta näet, kuinka suuri osa neuroverkon ennustuksista on oikein.\n",
     "print(f\"Test Loss:{results[0]} Test Accuracy:{results[1]*100}%\")"
    ],
    "outputs": [
