--- a/osa_1/osa1_tehtavat.ipynb
+++ b/osa_1/osa1_tehtavat.ipynb
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "source": [
     "## Tehtävä 1-1\n",
-    "### Aihe: Onnellisuus, Luokittelija: Perseptroni (3 p)\n",
+    "### Aihe: Onnellisuus, Luokittelija: Perseptroni (max. 4 p)\n",
     "\n",
     "Tutustu aineistoon **Somerville Happiness Survey Data Set**, jonka saat ladattua osoitteesta\n",
     "[https://archive.ics.uci.edu/ml/datasets/Somerville+Happiness+Survey](https://archive.ics.uci.edu/ml/datasets/Somerville+Happiness+Survey).\n",
@@ -269,7 +269,7 @@
    "cell_type": "markdown",
    "source": [
     "## Tehtävä 1-2\n",
-    "### Aihe: Uutisryhmien viestit, Luokittelija: Perseptroni (3 p)\n",
+    "### Aihe: Uutisryhmien viestit, Luokittelija: Perseptroni (max. 3 p)\n",
     "\n",
     "Tarkista seuraava aineistoon, josta data ladataan:\n",
     "\n",
@@ -414,11 +414,13 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Tehtävä 1-3) (2 p)\n",
-    "Toteuta sama tehtävä kuin kohdassa 1-2 toisella `categories_2` -kategorialistalla.  \n",
-    "Huom! Tässä tehtävässä tulosten sanallinen pohdinta on tärkeä osa tehtävää.\n",
+    "# Tehtävä 1-3\n",
+    "### Aihe: Uutisryhmien viestit, osa II (max. 2 p)\n",
     "\n",
-    "* **Pohdinta**: Vertaa uutisryhmien opetustuloksia tehtävissä 1-2 sekä 1-3 toisiinsa ja pohdi sanallisesti, että mistä mahdolliset erot saaduissa tuloksissa johtuvat.\n"
+    "Toteuta sama tehtävä kuin kohdassa 1-2, mutta toisella `categories_2` -kategorialistalla. Tarkoitus on myös verrata sanallisesti tehtävistä 1-2 ja 1-3 saatuja tuloksia toisiinsa. \n",
+    "  \n",
+    "* **Pohdinta**: Vertaa uutisryhmien opetustuloksia tehtävissä 1-2 sekä 1-3 toisiinsa ja pohdi sanallisesti, että mistä mahdolliset erot saaduissa tuloksissa johtuvat.\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false
